<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
    http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>com.github.oswetto</groupId>
    <artifactId>loboevolution</artifactId>
    <version>4.0</version>
    <packaging>pom</packaging>
    <name>Lobo Evolution</name>
    <description>Lobo Evolution Java Web Browser</description>
    <url>https://github.com/LoboEvolution/LoboEvolution</url>

    <licenses>
        <license>
            <name>MIT</name>
            <url>https://github.com/LoboEvolution/LoboEvolution/blob/master/LICENSE</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Ivan Di Francesco</name>
            <email>ivan.difrancesco@yahoo.it</email>
        </developer>
    </developers>

    <issueManagement>
        <system>Github</system>
        <url>https://github.com/LoboEvolution/LoboEvolution/issues</url>
    </issueManagement>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <scm>
        <connection>scm:git:git@github.com:LoboEvolution/LoboEvolution.git</connection>
        <developerConnection>scm:git:git@github.com:LoboEvolution/LoboEvolution.git</developerConnection>
        <url>scm:git:git@github.com:LoboEvolution/LoboEvolution.git</url>
        <tag>HEAD</tag>
    </scm>

    <profiles>
        <profile>
            <id>github</id>
            <distributionManagement>
                <repository>
                    <id>github</id>
                    <name>GitHub Packages</name>
                    <url>https://maven.pkg.github.com/loboevolution/loboevolution</url>
                </repository>
            </distributionManagement>
        </profile>
        <profile>
            <id>ossrh</id>
            <distributionManagement>
                <snapshotRepository>
                    <id>ossrh</id>
                    <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
                </snapshotRepository>
                <repository>
                    <id>ossrh</id>
                    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
                </repository>
            </distributionManagement>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>3.0.1</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.sonatype.plugins</groupId>
                        <artifactId>nexus-staging-maven-plugin</artifactId>
                        <version>1.6.13</version>
                        <extensions>true</extensions>
                        <configuration>
                            <serverId>ossrh</serverId>
                            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>3.0.0-M7</version>
                        <configuration>
                            <argLine>
                                --illegal-access=permit
                            </argLine>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>versions-maven-plugin</artifactId>
                        <version>2.5</version>
                        <configuration>
                            <generateBackupPoms>false</generateBackupPoms>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <modules>
        <module>LoboW3C</module>
        <module>LoboCommon</module>
        <module>LoboStore</module>
        <module>LoboApi</module>
        <module>LoboXalan</module>
        <module>LoboParser</module>
        <module>LoboPDF</module>
        <module>LoboIViewer</module>
        <module>LoboJTattoo</module>
        <module>LoboHTML</module>
        <module>LoboUnitTest</module>
        <module>LoboJhrome</module>
        <module>LoboEvo</module>
    </modules>

    <dependencies>
        <dependency>
            <groupId>org.loboevolution</groupId>
            <artifactId>LoboCommon</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>org.loboevolution</groupId>
            <artifactId>LoboStore</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>org.loboevolution</groupId>
            <artifactId>LoboApi</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>org.loboevolution</groupId>
            <artifactId>LoboXalan</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>org.loboevolution</groupId>
            <artifactId>LoboParser</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>org.loboevolution</groupId>
            <artifactId>LoboPDF</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>org.loboevolution</groupId>
            <artifactId>LoboIViewer</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>org.loboevolution</groupId>
            <artifactId>LoboJTattoo</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>org.loboevolution</groupId>
            <artifactId>LoboHTML</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>org.loboevolution</groupId>
            <artifactId>LoboEvo</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>org.loboevolution</groupId>
            <artifactId>LoboUnitTest</artifactId>
            <version>1.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.41.2.2</version>
        </dependency>
        <dependency>
            <groupId>com.fifesoft</groupId>
            <artifactId>rsyntaxtextarea</artifactId>
            <version>3.3.0</version>
        </dependency>
        <dependency>
            <groupId>org.glassfish.corba</groupId>
            <artifactId>glassfish-corba-omgapi</artifactId>
            <version>4.2.4</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.4.1</version>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <finalName>loboevolution-4.0</finalName>
                    <appendAssemblyId>false</appendAssemblyId>
                    <archive>
                        <manifest>
                            <mainClass>org.loboevolution.init.PlatformInit</mainClass>
                        </manifest>
                    </archive>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>3.12.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>3.4.1</version>
            </plugin>
			<plugin>
				<artifactId>maven-clean-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>
        </plugins>
    </build>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>3.4.1</version>
                <reportSets>
                    <reportSet>
                        <reports>
                            <report>index</report>
                            <report>dependencies</report>
                            <report>team</report>
                            <report>ci-management</report>
                            <report>issue-management</report>
                            <report>licenses</report>
                            <report>scm</report>
                        </reports>
                    </reportSet>
                </reportSets>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.9</version>
                <configuration>
                    <stylesheetfile>${basedir}/javadoc/stylesheet.css</stylesheetfile>
                </configuration>
                <reportSets>
                    <reportSet>
                        <reports>
                            <report>javadoc</report>
                            <report>test-javadoc</report>
                        </reports>
                    </reportSet>
                    <reportSet>
                        <id>aggregate</id>
                        <inherited>false</inherited>
                        <reports>
                            <report>aggregate</report>
                        </reports>
                    </reportSet>
                </reportSets>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-report-plugin</artifactId>
                <configuration>
                    <linkXRef>false</linkXRef>
                </configuration>
                <version>3.0.0-M7</version>
            </plugin>
        </plugins>
    </reporting>


</project>